--- a/docs/main.tex
+++ b/docs/main.tex
@@ -18,12 +18,12 @@
 %  \facultyeiti: Wydział Elektroniki i Technik Informacyjnych
 %  \facultymeil: Wydział Mechaniczny Energetyki i Lotnictwa
 % --
-% Rodzaj pracy: \EngineerThesis, \MasterThesis
+% Rodzaj pracy: \EngineerThesis, \MasterThesis, \PPMGR
 % --
 % Wybór języka: \langpol, \langeng
 %-------------------------------------------------------------
 \facultyeiti    % Wydział Elektroniki i Technik Informacyjnych
-\EngineerThesis % Praca inżynierska
+\PPMGR % Praca inżynierska
 \langpol % Praca w języku polskim
 
 \begin{document}
@@ -31,28 +31,28 @@
 %------------------
 % Strona tytułowa
 %------------------
-\instytut{XXXXXX}
-\kierunek{XXXXXX}
-\specjalnosc{XXXXXX}
+\instytut{Informatyki}
+\kierunek{Informatyka}
+\specjalnosc{Inteligentne Systemy}
 \title{
-    Niepotrzebnie długi i skomplikowany tytuł pracy \\
-    trudny do przeczytania, zrozumienia i wymówienia
+    Zastosowanie dużych modeli językowych (LLM) \\ 
+    do generowania konfiguracji Docker i Kubernetes
 }
 % Title in English for English theses
 % In English theses, you may remove this command
 \engtitle{
-    Unnecessarily long and complicated thesis' title \\
-    difficult to read, understand and pronounce
+    Application of large language models (LLMs) \\
+    for generating Docker and Kubernetes configurations
 }
 % Title in Polish for English theses
 % Use it only in English theses
 \poltitle{
-    Niepotrzebnie długi i skomplikowany tytuł pracy \\
-    trudny do przeczytania, zrozumienia i wymówienia
+    Zastosowanie dużych modeli językowych (LLM) \\ 
+    do generowania konfiguracji Docker i Kubernetes
 }
-\author{\{Imię i Nazwisko\}}
-\album{XXXXXX}
-\promotor{XXXXXX}
+\author{Bartłomiej Rasztabiga}
+\album{304117}
+\promotor{dr inż. Mateusz Modrzejewski}
 \date{\the\year}
 \maketitle
 
@@ -87,13 +87,6 @@
 \pagestyle{headings}
 
 \input{tex/1-wstep}         % Wygodnie jest trzymać każdy rozdział w osobnym pliku.
-\input{tex/2-de-finibus}    % Umożliwia to również łatwą migrację do nowej wersji szablonu:
-\input{tex/3-code-listings} % zazwyczaj wystarczy podmienić plik src/wut-thesis.cls
-
- % Można też pisać rozdziały w jednym pliku.
-\clearpage % Zawsze zaczynamy rozdział od nowej strony
-\section{Summatio}
-\lipsum[4-10]
 
 %---------------
 % Bibliografia
@@ -109,9 +102,7 @@
 % Makro \acronym dodaje skrót/symbol do listy,
 % zapewniając podstawowe formatowanie.
 \acronymlist
-\acronym{EiTI}{Wydział Elektroniki i Technik Informacyjnych}
-\acronym{PW}{Politechnika Warszawska}
-\acronym{WEIRD}{ang. \emph{Western, Educated, Industrialized, Rich and Democratic}}
+\acronym{LLM}{ang. \emph{Large Language Model}}
 \vspace{0.8cm}
 
 %--------------------------------------
@@ -130,32 +121,6 @@
 %-------------
 
 % Obrazki i tabele w załącznikach nie trafiają do spisów
-\captionsetup[figure]{list=no}
-\captionsetup[table]{list=no}
-
-% Załącznik 1
-\clearpage
-\appendix{Nazwa załącznika 1}
-\lipsum[1-3]
-\begin{figure}[!h]
-	\centering \includegraphics[width=0.5\linewidth]{logopw2.png}
-	\caption{Obrazek w załączniku.}
-\end{figure}
-\lipsum[4-7]
-
-% Załącznik 2
-\clearpage
-\appendix{Nazwa załącznika 2}
-\lipsum[1-2]
-\begin{table}[!h] \centering
-    \caption{Tabela w załączniku.}
-    \begin{tabular} {| c | c | r |} \hline
-        Kolumna 1       & Kolumna 2 & Liczba \\ \hline\hline
-        cell1           & cell2     & 60     \\ \hline
-        \multicolumn{2}{|r|}{Suma:} & 123,45 \\ \hline
-    \end{tabular}
-\end{table}
-\lipsum[3-4]
 
 % Używając powyższych spisów jako szablonu,
 % możesz dodać również swój własny wykaz,
