--- a/docs/src/wut-thesis.cls
+++ b/docs/src/wut-thesis.cls
@@ -261,6 +261,9 @@
 \newcommand{\MasterThesis}{
     \newcommand{\@ThesisType}{mgr}
 }
+\newcommand{\PPMGR}{
+    \newcommand{\@ThesisType}{ppmgr}
+}
 \newcommand{\instytut}[1]{
     \newcommand{\@instytut}{#1}
 }
