--- a/docs/main.tex
+++ b/docs/main.tex
@@ -61,16 +61,18 @@
 % English abstract if \langeng is set
 %-------------------------------------
 \cleardoublepage % Zaczynamy od nieparzystej strony
-\abstract \lipsum[1-3]
-\keywords XXX, XXX, XXX
+% TODO uncomment
+% \abstract \lipsum[1-3]
+% \keywords XXX, XXX, XXX
 
 %----------------------------------------
 % Streszczenie po angielsku dla \langpol
 % Polish abstract if \langeng is set
 %----------------------------------------
 \clearpage
-\secondabstract \kant[1-3]
-\secondkeywords XXX, XXX, XXX
+% TODO uncomment
+% \secondabstract \kant[1-3]
+% \secondkeywords XXX, XXX, XXX
 
 \pagestyle{plain}
 
@@ -86,7 +88,11 @@
 \cleardoublepage % Zaczynamy od nieparzystej strony
 \pagestyle{headings}
 
-\input{tex/1-wstep}         % Wygodnie jest trzymać każdy rozdział w osobnym pliku.
+\input{tex/1-wybor-tematu}
+\input{tex/2-przeglad-literatury}
+\input{tex/3-przeglad-narzedzi}
+\input{tex/4-opis-eksperymentow}
+\input{tex/5-dalsze-prace}
 
 %---------------
 % Bibliografia
@@ -101,20 +107,23 @@
 % generuje właściwy tytuł sekcji, w zależności od języka.
 % Makro \acronym dodaje skrót/symbol do listy,
 % zapewniając podstawowe formatowanie.
-\acronymlist
-\acronym{LLM}{ang. \emph{Large Language Model}}
-\vspace{0.8cm}
+
+% TODO uncomment
+% \acronymlist
+% \acronym{LLM}{ang. \emph{Large Language Model}}
+% \vspace{0.8cm}
 
 %--------------------------------------
 % Spisy: rysunków, tabel, załączników
 %--------------------------------------
 \pagestyle{plain}
 
-\listoffigurestoc    % Spis rysunków.
-\vspace{1cm}         % vertical space
-\listoftablestoc     % Spis tabel.
-\vspace{1cm}         % vertical space
-\listofappendicestoc % Spis załączników
+% TODO uncomment
+% \listoffigurestoc    % Spis rysunków.
+% \vspace{1cm}         % vertical space
+% \listoftablestoc     % Spis tabel.
+% \vspace{1cm}         % vertical space
+% \listofappendicestoc % Spis załączników
 
 %-------------
 % Załączniki
