--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -90,6 +90,7 @@
 % MOJE
 
 
+
 @misc{malul_genkubesec_2024,
 	title = {{GenKubeSec}: {LLM}-{Based} {Kubernetes} {Misconfiguration} {Detection}, {Localization}, {Reasoning}, and {Remediation}},
 	shorttitle = {{GenKubeSec}},
@@ -177,4 +178,96 @@
 	year = {2023},
 	pages = {1--4},
 	file = {PDF:/Users/rasztabigab/Zotero/storage/F77VRJ2R/Pujar et al. - 2023 - Invited Automated Code generation for Information Technology Tasks in YAML through Large Language M.pdf:application/pdf},
+}
+
+@misc{hu_llm-based_2025,
+	title = {An {LLM}-based {Agent} for {Reliable} {Docker} {Environment} {Configuration}},
+	url = {http://arxiv.org/abs/2502.13681},
+	doi = {10.48550/arXiv.2502.13681},
+	abstract = {Environment configuration is a critical yet time-consuming step in software development, especially when dealing with unfamiliar code repositories. While Large Language Models (LLMs) demonstrate the potential to accomplish software engineering tasks, existing methods for environment configuration often rely on manual efforts or fragile scripts, leading to inefficiencies and unreliable outcomes. We introduce Repo2Run, the first LLM-based agent designed to fully automate environment configuration and generate executable Dockerfiles for arbitrary Python repositories. We address two major challenges: (1) enabling the LLM agent to configure environments within isolated Docker containers, and (2) ensuring the successful configuration process is recorded and accurately transferred to a Dockerfile without error. To achieve this, we propose atomic configuration synthesis, featuring a dual-environment architecture (internal and external environment) with a rollback mechanism to prevent environment “pollution” from failed commands, guaranteeing atomic execution (execute fully or not at all) and a Dockerfile generator to transfer successful configuration steps into runnable Dockerfiles. We evaluate Repo2Run on our proposed benchmark of 420 recent Python repositories with unit tests, where it achieves an 86.0\% success rate, outperforming the best baseline by 63.9\%. Repo2Run is available at https://github.com/bytedance/Repo2Run.},
+	language = {en},
+	urldate = {2025-03-31},
+	publisher = {arXiv},
+	author = {Hu, Ruida and Peng, Chao and Wang, Xinchen and Gao, Cuiyun},
+	month = mar,
+	year = {2025},
+	note = {arXiv:2502.13681 [cs]},
+	keywords = {Computer Science - Computation and Language, Computer Science - Machine Learning, Computer Science - Software Engineering, Computer Science - Artificial Intelligence},
+	file = {PDF:/Users/rasztabigab/Zotero/storage/LB7XG52V/Hu et al. - 2025 - An LLM-based Agent for Reliable Docker Environment Configuration.pdf:application/pdf},
+}
+
+@misc{srivatsa_survey_2024,
+	title = {A {Survey} of using {Large} {Language} {Models} for {Generating} {Infrastructure} as {Code}},
+	url = {http://arxiv.org/abs/2404.00227},
+	doi = {10.48550/arXiv.2404.00227},
+	abstract = {Infrastructure as Code (IaC) is a revolutionary approach which has gained significant prominence in the Industry. IaC manages and provisions IT infrastructure using machinereadable code by enabling automation, consistency across the environments, reproducibility, version control, error reduction and enhancement in scalability. However, IaC orchestration is often a painstaking effort which requires specialised skills as well as a lot of manual effort. Automation of IaC is a necessity in the present conditions of the Industry and in this survey, we study the feasibility of applying Large Language Models (LLM) to address this problem. LLMs are large neural network-based models which have demonstrated significant language processing abilities and shown to be capable of following a range of instructions within a broad scope. Recently, they have also been adapted for code understanding and generation tasks successfully, which makes them a promising choice for the automatic generation of IaC configurations. In this survey, we delve into the details of IaC, usage of IaC in different platforms, their challenges, LLMs in terms of code-generation aspects and the importance of LLMs in IaC along with our own experiments. Finally, we conclude by presenting the challenges in this area and highlighting the scope for future research.},
+	language = {en},
+	urldate = {2025-03-31},
+	publisher = {arXiv},
+	author = {Srivatsa, Kalahasti Ganesh and Mukhopadhyay, Sabyasachi and Katrapati, Ganesh and Shrivastava, Manish},
+	month = mar,
+	year = {2024},
+	note = {arXiv:2404.00227 [cs]},
+	keywords = {Computer Science - Computation and Language, Computer Science - Software Engineering},
+	file = {PDF:/Users/rasztabigab/Zotero/storage/MDY23SUQ/Srivatsa et al. - 2024 - A Survey of using Large Language Models for Generating Infrastructure as Code.pdf:application/pdf},
+}
+
+@article{kon_iac-eval_nodate,
+	title = {{IaC}-{Eval}: {A} {Code} {Generation} {Benchmark} for {Cloud} {Infrastructure}-as-{Code} {Programs}},
+	abstract = {Infrastructure-as-Code (IaC), an important component of cloud computing, allows the definition of cloud infrastructure in high-level programs. However, developing IaC programs is challenging, complicated by factors that include the burgeoning complexity of the cloud ecosystem (e.g., diversity of cloud services and workloads), and the relative scarcity of IaC-specific code examples and public repositories. While large language models (LLMs) have shown promise in general code generation and could potentially aid in IaC development, no benchmarks currently exist for evaluating their ability to generate IaC code. We present IaC-Eval, a first step in this research direction. IaC-Eval’s dataset includes 458 human-curated scenarios covering a wide range of popular AWS services, at varying difficulty levels. Each scenario mainly comprises a natural language IaC problem description and an infrastructure intent specification. The former is fed as user input to the LLM, while the latter is a general notion used to verify if the generated IaC program conforms to the user’s intent; by making explicit the problem’s requirements that can encompass various cloud services, resources and internal infrastructure details. Our in-depth evaluation shows that contemporary LLMs perform poorly on IaC-Eval, with the top-performing model, GPT-4, obtaining a pass@1 accuracy of 19.36\%. In contrast, it scores 86.6\% on EvalPlus, a popular Python code generation benchmark, highlighting a need for advancements in this domain. We open-source the IaC-Eval dataset and evaluation framework at https://github.com/autoiac-project/iac-eval to enable future research on LLM-based IaC code generation.},
+	language = {en},
+	author = {Kon, Patrick Tser Jern and Liu, Jiachen and Qiu, Yiming and Fan, Weijun and He, Ting and Lin, Lei and Zhang, Haoran and Park, Owen M and Elengikal, George S and Kang, Yuxin and Chen, Ang and Chowdhury, Mosharaf and Lee, Myungjin and Wang, Xinyu},
+	file = {PDF:/Users/rasztabigab/Zotero/storage/2LCEBURH/Kon et al. - IaC-Eval A Code Generation Benchmark for Cloud Infrastructure-as-Code Programs.pdf:application/pdf},
+}
+
+@inproceedings{low_repairing_2024,
+	address = {Pittsburgh, PA, USA},
+	title = {Repairing {Infrastructure}-as-{Code} using {Large} {Language} {Models}},
+	copyright = {https://doi.org/10.15223/policy-029},
+	isbn = {9798350391930},
+	url = {https://ieeexplore.ieee.org/document/10734039/},
+	doi = {10.1109/SecDev61143.2024.00008},
+	abstract = {Infrastructure-as-Code (IaC) is the practice of provisioning and managing cloud resources using machine-readable code. IaC is seeing increased adoption because it enhances transparency and reliability of infrastructure operations. However, as any software code, IaC can also contain misconﬁgurations, which can lead to insecure infrastructure, which may result in data breaches. Existing IaC scanning tools are able to detect common misconﬁgurations in IaC but they require IaC developers to manually repair the code. Recent advances in Large Language Models (LLMs) have led to promising results in applying LLMs to Automatic Program Repair (APR) tasks for code written in different languages. In this work, we propose an LLM-based approach to ﬁx misconﬁgurations in IaC code. After misconﬁgurations in IaC code are identiﬁed by scanning tools, we feed the LLMs with the IaC code, details about the misconﬁgurations, and additional context provided by a human-in-the-loop and prompt the LLM to generate the repaired IaC code. We tested our approach on several vulnerable IaC repositories and found that the GPT-4 model from OpenAI suggests ﬁxes that reduce up to 84.7\% of the misconﬁguration alarms produced by the scanners and our two-pass solution signiﬁcantly improves the performance over a one-pass only approach. However, of the ﬁxes suggested, we manually determined that only 79.6\% actually solve the problem, while the remaining 20.4\% are hallucinated ﬁxes. Speciﬁcally, LLM hallucinations in the generated outputs pass checks for misconﬁgurations but fail other syntax and schema validation checks or do not address the underlying security issue. We propose a few potential approaches to tackle this challenge.},
+	language = {en},
+	urldate = {2025-03-31},
+	booktitle = {2024 {IEEE} {Secure} {Development} {Conference} ({SecDev})},
+	publisher = {IEEE},
+	author = {Low, En and Cheh, Carmen and Chen, Binbin},
+	month = oct,
+	year = {2024},
+	pages = {20--27},
+	file = {PDF:/Users/rasztabigab/Zotero/storage/65ZKZ3MJ/Low et al. - 2024 - Repairing Infrastructure-as-Code using Large Language Models.pdf:application/pdf},
+}
+
+@misc{fu_security_2025,
+	title = {Security {Weaknesses} of {Copilot}-{Generated} {Code} in {GitHub} {Projects}: {An} {Empirical} {Study}},
+	shorttitle = {Security {Weaknesses} of {Copilot}-{Generated} {Code} in {GitHub} {Projects}},
+	url = {http://arxiv.org/abs/2310.02059},
+	doi = {10.48550/arXiv.2310.02059},
+	abstract = {YUJIA FU, School of Computer Science, Wuhan University, China PENG LIANG∗, School of Computer Science, Wuhan University, China AMJED TAHIR, Massey University, New Zealand ZENGYANG LI, School of Computer Science, Central China Normal University, China MOJTABA SHAHIN, RMIT University, Australia JIAXIN YU, School of Computer Science, Wuhan University, China JINFU CHEN, School of Computer Science, Wuhan University, China Modern code generation tools utilizing AI models like Large Language Models (LLMs) have gained increased popularity due to their ability to produce functional code. However, their usage presents security challenges, often resulting in insecure code merging into the code base. Thus, evaluating the quality of generated code, especially its security, is crucial. While prior research explored various aspects of code generation, the focus on security has been limited, mostly examining code produced in controlled environments rather than open source development scenarios. To address this gap, we conducted an empirical study, analyzing code snippets generated by GitHub Copilot and two other AI code generation tools (i.e., CodeWhisperer and Codeium) from GitHub projects. Our analysis identified 733 snippets, revealing a high likelihood of security weaknesses, with 29.5\% of Python and 24.2\% of JavaScript snippets affected. These issues span 43 Common Weakness Enumeration (CWE) categories, including significant ones like CWE-330: Use of Insufficiently Random Values, CWE-94: Improper Control of Generation of Code, and CWE-79: Cross-site Scripting. Notably, eight of those CWEs are among the 2023 CWE Top-25, highlighting their severity. We further examined using Copilot Chat to fix security issues in Copilot-generated code by providing Copilot Chat with warning messages from the static analysis tools, and up to 55.5\% of the security issues can be fixed. We finally provide the suggestions for mitigating security issues in generated code. CCS Concepts: • Software and its engineering → Software development techniques; • Security and privacy → Software security engineering.},
+	language = {en},
+	urldate = {2025-03-31},
+	publisher = {arXiv},
+	author = {Fu, Yujia and Liang, Peng and Tahir, Amjed and Li, Zengyang and Shahin, Mojtaba and Yu, Jiaxin and Chen, Jinfu},
+	month = feb,
+	year = {2025},
+	note = {arXiv:2310.02059 [cs]},
+	keywords = {Computer Science - Cryptography and Security, Computer Science - Software Engineering},
+	file = {PDF:/Users/rasztabigab/Zotero/storage/6SMHPY4D/Fu et al. - 2025 - Security Weaknesses of Copilot-Generated Code in GitHub Projects An Empirical Study.pdf:application/pdf},
+}
+
+@misc{liu_prompt_2024,
+	title = {Prompt {Injection} attack against {LLM}-integrated {Applications}},
+	url = {http://arxiv.org/abs/2306.05499},
+	doi = {10.48550/arXiv.2306.05499},
+	abstract = {Large Language Models (LLMs), renowned for their superior proficiency in language comprehension and generation, stimulate a vibrant ecosystem of applications around them. However, their extensive assimilation into various services introduces significant security risks. This study deconstructs the complexities and implications of prompt injection attacks on actual LLM-integrated applications. Initially, we conduct an exploratory analysis on ten commercial applications, highlighting the constraints of current attack strategies in practice. Prompted by these limitations, we subsequently formulate HOUYI, a novel black-box prompt injection attack technique, which draws inspiration from traditional web injection attacks. HOUYI is compartmentalized into three crucial elements: a seamlessly-incorporated pre-constructed prompt, an injection prompt inducing context partition, and a malicious payload designed to fulfill the attack objectives. Leveraging HOUYI, we unveil previously unknown and severe attack outcomes, such as unrestricted arbitrary LLM usage and uncomplicated application prompt theft. We deploy HOUYI on 36 actual LLM-integrated applications and discern 31 applications susceptible to prompt injection. 10 vendors have validated our discoveries, including Notion, which has the potential to impact millions of users. Our investigation illuminates both the possible risks of prompt injection attacks and the possible tactics for mitigation.},
+	language = {en},
+	urldate = {2025-03-31},
+	publisher = {arXiv},
+	author = {Liu, Yi and Deng, Gelei and Li, Yuekang and Wang, Kailong and Wang, Zihao and Wang, Xiaofeng and Zhang, Tianwei and Liu, Yepang and Wang, Haoyu and Zheng, Yan and Liu, Yang},
+	month = mar,
+	year = {2024},
+	note = {arXiv:2306.05499 [cs]},
+	keywords = {Computer Science - Computation and Language, Computer Science - Cryptography and Security, Computer Science - Software Engineering, Computer Science - Artificial Intelligence},
+	file = {PDF:/Users/rasztabigab/Zotero/storage/494GYLID/Liu et al. - 2024 - Prompt Injection attack against LLM-integrated Applications.pdf:application/pdf},
 }
