--- a/docs/main.tex
+++ b/docs/main.tex
@@ -23,7 +23,7 @@
 % Wybór języka: \langpol, \langeng
 %-------------------------------------------------------------
 \facultyeiti    % Wydział Elektroniki i Technik Informacyjnych
-\PPMGR % Praca inżynierska
+\MasterThesis % Praca inżynierska
 \langpol % Praca w języku polskim
 
 \begin{document}
@@ -62,8 +62,8 @@
 %-------------------------------------
 \cleardoublepage % Zaczynamy od nieparzystej strony
 % TODO uncomment
-% \abstract \lipsum[1-3]
-% \keywords XXX, XXX, XXX
+\abstract \lipsum[1-3]
+\keywords XXX, XXX, XXX
 
 %----------------------------------------
 % Streszczenie po angielsku dla \langpol
@@ -71,8 +71,8 @@
 %----------------------------------------
 \clearpage
 % TODO uncomment
-% \secondabstract \kant[1-3]
-% \secondkeywords XXX, XXX, XXX
+\secondabstract \kant[1-3]
+\secondkeywords XXX, XXX, XXX
 
 \pagestyle{plain}
 
@@ -88,11 +88,15 @@
 \cleardoublepage % Zaczynamy od nieparzystej strony
 \pagestyle{headings}
 
-\input{tex/1-wybor-tematu}
+% TODO rozdziały magisterki
+% 
+% TODO
+
+\input{tex/1-wprowadzenie}
 \input{tex/2-przeglad-literatury}
-\input{tex/3-przeglad-narzedzi}
-\input{tex/4-opis-eksperymentow}
-\input{tex/5-dalsze-prace}
+% \input{tex/3-przeglad-narzedzi}
+% \input{tex/4-opis-eksperymentow}
+% \input{tex/5-dalsze-prace}
 
 %---------------
 % Bibliografia
