--- a/docs/tex/2-przeglad-literatury.tex
+++ b/docs/tex/2-przeglad-literatury.tex
@@ -1,25 +1,113 @@
 \clearpage % Rozdziały zaczynamy od nowej strony.
 \section{Przegląd literatury}
 
-Niedawny rozwój możliwości generowania kodu dzięki zastosowaniu dużych modeli językowych dotyczył głównie języków programowania ogólnego przeznaczenia. Języki specyficzne dla dziedzin, takie jak te wykorzystywane w automatyzacji IT, otrzymały znacznie mniej uwagi, mimo że angażują wielu aktywnych deweloperów i stanowią istotny element współczesnych platform chmurowych. \cite{pujar_invited_2023}
+\subsection{Zastosowanie LLM w generowaniu kodu infrastruktury}
 
-Literatura dotycząca wykorzystania dużych modeli językowych (LLM) do generowania manifestów Docker i Kubernetes jest ograniczona. Istnieją jednak badania, które zajmują się różnymi aspektami tej tematyki, szczególnie w kontekście automatyzacji infrastruktury jako kodu (IaC). Żadna z do tej pory przeanalizowanych, istniejących prac nie koncentruje się jednak na pełnym wykorzystaniu repozytorium aplikacji jako wejścia do modeli LLM, a także na dokładnym analizowaniu problemów bezpieczeństwa takich konfiguracji. W niniejszym przeglądzie przedstawiane są wybrane badania oraz wskazywane są sposoby, w jakie niniejsza praca rozszerza i ulepsza istniejące podejścia.
+Podejście Infrastructure as Code polega na zarządzaniu infrastrukturą IT poprzez definiowanie jej konfiguracji w postaci czytelnego dla maszyny kodu. Zapewnia to automatyzację, spójność środowisk, kontrolę wersji oraz skalowalność zarządzania infrastrukturą. Tworzenie i utrzymanie takiej infrastruktury bywa jednak wymagające, stąd coraz większe zainteresowanie automatyzacją tych zadań z użyciem AI. Duże modele językowe, trenowane na ogromnych zbiorach danych tekstowych i kodu, wykazały zdolność do generowania i rozumienia kodu, co czyni je obiecującym narzędziem do automatycznego tworzenia konfiguracji IaC. W ostatnich latach pojawiło się wiele prac badających zastosowanie LLM do różnych platform i języków IaC. Srivatsa i in. (2024) przedstawili przekrojowe spojrzenie na ten temat w swojej pracy przeglądowej, podkreślając, że automatyzacja IaC za pomocą LLM może zredukować nakład pracy ludzkiej i błędy, jeśli uda się odpowiednio ukierunkować model. W ankiecie tej omówiono również wyzwania stojące przed takimi rozwiązaniami oraz perspektywy dalszych badań.
 
-Praca Malula i in. wprowadza system GenKubeSec \cite{malul_genkubesec_2024}, który wykorzystuje modele LLM do wykrywania i naprawiania błędnych konfiguracji Kubernetes (KCF). System ten jest innowacyjny, ponieważ dostarcza pełne rozwiązanie: od wykrywania problemów, przez ich lokalizację, aż po ich naprawę. Kluczową zaletą GenKubeSec jest minimalizacja ryzyka związanego z bezpieczeństwem poprzez wykorzystanie lokalnych modeli LLM zamiast komercyjnych API. Praca poszerza te badania, badając nie tylko wykrywanie błędnych konfiguracji, ale także aspekt ich deterministyczności i odporności na manipulacje danymi wejściowymi.
+Aktualne badania integrujące LLM z narzędziami chmurowymi pokazują obiecujące rezultaty, choć są to dopiero początki. Lanciano i in. (2023) zaproponowali wyspecjalizowany model analizujący pliki wdrożeniowe Kubernetes, aby wspomóc mniej doświadczonych użytkowników w projektowaniu konfiguracji i zapewnieniu ich jakości. Z kolei Xu i in. (2023) wprowadzili benchmark CloudEval-YAML do oceny zdolności LLM w generowaniu konfiguracji aplikacji cloud-native (w formacie YAML), udostępniając zestaw testów jednostkowych do weryfikacji poprawności wygenerowanych manifestów. Inni badacze sugerują zastosowanie LLM również do automatycznego monitorowania i utrzymania systemów – np. Kowal i in. zaproponowali pipeline wykorzystujący LLM do detekcji anomalii i autoremediacji w środowisku mikrousług, w celu zwiększenia stabilności systemu. Podejścia te często bazują na trenowaniu dedykowanych modeli językowych dopasowanych do domeny konfiguracji (np. z użyciem specjalistycznych korpusów danych). Alternatywą dla kosztownego trenowania od podstaw jest wykorzystanie istniejących, ogólnych modeli (GPT-3.5, GPT-4, Llama2 itp.) i dostrajanie ich za pomocą odpowiednich promptów. Nasza praca wpisuje się w ten nurt – badamy, jak standardowe modele językowe mogą być wykorzystane (bez dodatkowego trenowania) do generowania plików Dockerfile i manifestów Kubernetes zgodnych z wymaganiami DevOps, poprzez odpowiednie techniki inżynierii promptów.
 
-Ueno i Uchiumi proponują benchmark oceniający jakość manifestów Kubernetes generowanych przez modele LLM na podstawie specyfikacji Docker Compose \cite{ueno_migrating_2024}. Wyniki pokazują, że generowane manifesty są często poprawne, ale brakuje w nich spójności i komentarzy poprawiających czytelność. W pracy uwzględniana jest ta krytyka, koncentrując się na generowaniu manifestów, które są zarówno funkcjonalne, jak i czytelne dla ludzi.
+Poniżej omówiono najważniejsze prace dotyczące wykorzystania LLM do generowania konfiguracji IaC, ze szczególnym naciskiem na praktyczne narzędzia i systemy oraz badania eksperymentalne. Przedstawiono zarówno korzyści automatyzacji (przyspieszenie pracy, odciążenie ekspertów, poprawa produktywności), jak i wyzwania (błędy i halucynacje modeli, aspekty bezpieczeństwa, zgodność z intencjami użytkownika), jakie zidentyfikowano w literaturze.
 
-Kratzke i Drews badali możliwości standardowych modeli LLM w generowaniu manifestów Kubernetes przy użyciu zaawansowanych technik inżynierii promptów \cite{kratzke_dont_2024}. Badanie pokazuje, że efektywne projektowanie promptów może znacząco poprawić jakość generowanych manifestów. Praca rozwija ten kierunek, analizując nie tylko jakość generowanych konfiguracji, ale również ich podatność na ataki.
+\textbf{Generowanie konfiguracji Docker przy użyciu LLM}
 
-Pujar i in. skoncentrowali się na generowaniu konfiguracji YAML dla Ansible za pomocą modeli LLM \cite{pujar_invited_2023}. Choć praca skupia się na inżynierii promptów i budowaniu dedykowanych datasetów, brak w niej analizy problemów bezpieczeństwa czy deterministyczności. Niniejsza praca rozszerza ten kontekst na Kubernetes i Docker, uwzględniając dodatkowe aspekty, takie jak jailbreaking modeli.
+Docker stał się standardem w dziedzinie konteneryzacji aplikacji, umożliwiając tworzenie przenośnych, izolowanych środowisk wykonawczych. Jednak tworzenie efektywnych i bezpiecznych plików Dockerfile wymaga specjalistycznej wiedzy i doświadczenia.
 
-Lanciano i in. zaproponowali podejście do analizy jakości manifestów Kubernetes z wykorzystaniem LLM \cite{lanciano_analyzing_2023}. System dostarcza rekomendacje dotyczące jakości kodu i pomaga mniej doświadczonym deweloperom w stosowaniu najlepszych praktyk. Praca rozwija tę ideę, koncentrując się na automatyzacji całego procesu, od generowania po wdrażanie.
+Blog Docker przedstawia innowacyjne podejście do generowania plików Dockerfile przy użyciu GenAI. Autorzy demonstrują, jak wyposażenie asystenta AI w narzędzia do analizy projektu pozwala na generowanie bardziej adekwatnych plików Dockerfile. Zamiast polegać wyłącznie na ogólnej wiedzy modelu, asystent może bezpośrednio analizować kod źródłowy projektu, określać jego typ (np. projekt NPM) i na tej podstawie generować odpowiedni Dockerfile. Co więcej, autorzy podkreślają znaczenie inkorporowania najlepszych praktyk do procesu generowania, co pozwala uniknąć typowych problemów, takich jak używanie przestarzałych obrazów bazowych czy pomijanie mechanizmów buforowania.
 
-Podjęte w literaturze próby wykorzystania LLM w kontekście IaC i Kubernetes koncentrują się głównie na generowaniu kodu i podstawowej analizie. Niniejsza praca poszerza ten obszar, skupiając się m.in. na:
+\begin{lstlisting}
+# Stage 1 - Downloading dependencies
+FROM node:22-slim AS deps
+WORKDIR /usr/src/app
+COPY package*.json ./
+RUN --mount=type=cache,target=/root/.npm npm ci --omit=dev
 
-\begin{itemize}
-    \item Wykorzystaniu repozytoriów kodu jako źródła wejściowego dla LLM,
-    \item Analizie deterministyczności i bezpieczeństwa generowanych konfiguracji,
-    \item Zastosowaniu metod oceny odporności na manipulacje danymi wejściowymi,
-    \item Porównaniu topowych modeli pod kątem możliwej złożoności generowanych konfiguracji (np. obsługa wielu kontenerów, sieci czy woluminów).
-\end{itemize}
+# Stage 2 - Building application
+FROM deps AS build
+RUN --mount=type=cache,target=/root/.npm npm ci && npm build
+
+# Stage 3 - Using a recommended base image from Scout
+FROM node:22-slim
+WORKDIR /usr/src/app
+COPY --from=deps /usr/src/app/node_modules ./node_modules
+COPY --from=build /usr/src/app/dist ./dist
+CMD [ "npm", "start" ]    
+\end{lstlisting}
+
+Powyższy przykład wygenerowanego przez LLM pliku Dockerfile ilustruje, jak model może zastosować najlepsze praktyki, takie jak budowa wieloetapowa, używanie rekomendowanych obrazów bazowych oraz mechanizmów cache.
+
+Jednym z pionierskich rozwiązań praktycznych integrujących LLM z DevOps jest Repo2Run – agent oparty na LLM, zaprojektowany do automatycznego konfigurowania środowisk i generowania plików Dockerfile dla dowolnych repozytoriów Python. Narzędzie to zostało zaprezentowane przez Hu i in. (2025) i stanowi próbę pełnej automatyzacji procesu tworzenia kontenera na podstawie kodu aplikacji. Problem, jaki adresuje Repo2Run, to złożoność ręcznego przygotowania Dockerfile dla istniejącego projektu – np. ustalenie zależności, właściwej bazy obrazu, komend instalacji pakietów – a także ryzyko błędów podczas konfiguracji środowiska (np. niepowodzenie jednej komendy może zostawić środowisko w nieokreślonym stanie). Repo2Run rozwiązuje to poprzez dwupoziomową architekturę środowiska uruchomieniowego. Model LLM działa wewnątrz odizolowanego kontenera (środowisko wewnętrzne) i wykonuje kolejne polecenia konfiguracyjne, podczas gdy otaczające go środowisko zewnętrzne monitoruje przebieg i w razie potrzeby modyfikuje kontekst (np. zmienia bazowy obraz Docker). Wprowadzono mechanizm rollback, który przy każdym błędzie cofa stan kontenera do poprzedniego stabilnego punktu, zapobiegając tzw. „zanieczyszczeniu” środowiska nieudanymi komendami. Równolegle działa komponent generujący Dockerfile – na podstawie zestawu wykonanych z sukcesem poleceń buduje on finalny plik Dockerfile, pomijając te instrukcje, które powodowały błędy, aby wynikowy obraz dawał się zbudować bez błędów. Według autorów, Repo2Run jest pierwszym podejściem wykorzystującym agenta LLM do automatycznego wygenerowania Dockerfile z istniejącego repozytorium kodu w pełni samodzielnie. Skuteczność rozwiązania oceniono na zbiorze 420 popularnych projektów Pythona z testami jednostkowymi – w 86\% przypadków Repo2Run zdołał poprawnie skonfigurować środowisko i wygenerować działający Dockerfile dla danego projektu. Tak wysoki odsetek pokazuje potencjał LLM w automatyzacji tworzenia kontenerów, choć warto zauważyć, że około 14\% przypadków nadal wymaga interwencji (co może wynikać z nietypowych zależności lub ograniczeń modelu w rozumieniu specyfiki danego projektu).
+
+W pracy "An LLM-based Agent for Reliable Docker Environment Configuration" autorzy idą o krok dalej, prezentując agenta opartego na LLM, który nie tylko generuje pliki Dockerfile, ale również iteracyjnie udoskonala je na podstawie feedbacku z procesu budowy i uruchamiania kontenerów. To podejście pokazuje, jak LLM mogą być wykorzystane jako część większego systemu, który adaptuje się do zmieniających się wymagań i warunków.
+
+\textbf{Zastosowanie LLM w generowaniu i zarządzaniu konfiguracjami Kubernetes}
+
+Kubernetes, jako platforma do orkiestracji kontenerów, oferuje potężne możliwości w zakresie zarządzania aplikacjami kontenerowymi, ale jest również znany z wysokiego poziomu złożoności. Tworzenie poprawnych manifestów Kubernetes stanowi wyzwanie nawet dla doświadczonych specjalistów DevOps.
+
+Innym obszarem praktycznego wykorzystania LLM jest generowanie manifestów Kubernetes – złożonych plików YAML opisujących obiekty Kubernetes (pod’y, usługi, konfiguracje itp.). Kubernetes stał się standardem orkiestracji kontenerów w środowiskach chmurowych, jednak tworzenie manifestów konfiguracyjnych bywa trudne i podatne na błędy ze względu na ich deklaratywny, szczegółowy charakter. Każdy błąd lub pominięcie w manifeście może skutkować niepoprawnym działaniem aplikacji, a sam proces wymaga znajomości specyfiki API Kubernetes. Kratzke i Drews (2024) zaproponowali podejście “Don’t Train, Just Prompt”, w którym wykorzystali istniejące modele językowe (m.in. GPT-3.5, GPT-4 oraz otwarte modele Llama2, Mistral) do generowania manifestów Kubernetes na podstawie opisów tekstowych, bez trenowania modeli od zera. Zastosowali różne techniki inżynierii promptów, w tym tryb zero-shot (model generuje manifest tylko na podstawie pojedynczej instrukcji), few-shot (model otrzymuje kilka przykładów poprawnych manifestów jako kontekst) oraz prompt-chaining (łańcuch promptów, gdzie wynik pierwszego zapytania jest iteracyjnie korygowany w kolejnym). Wyniki ich badań są zachęcające: nawet bez dostrajania, duże modele były w stanie wygenerować poprawne manifesty spełniające podane wymagania konfiguracyjne, choć czasem wymagały drobnych poprawek przez człowieka. W szczególności modele GPT-4 oraz GPT-3.5 okazały się na tyle potężne, że umożliwiły w pewnych przypadkach w pełni automatyczne wdrożenie aplikacji na Kubernetes – od specyfikacji słownej do działającego klastru – bez konieczności ręcznej ingerencji DevOps. Co ciekawe, autorzy zauważyli, że nie zawsze „większy znaczy lepszy” – mniejsze modele (jak np. Llama2 13B) przy odpowiednim przygotowaniu promptu potrafiły dorównać, a nawet przewyższyć dokładnością większe modele w generowaniu niektórych fragmentów manifestu. Kwestionuje to powszechne założenie, że tylko największe modele są użyteczne, wskazując jednocześnie na dużą rolę właściwej konfiguracji zapytania (promptu) w osiągnięciu dobrych wyników. W podsumowaniu pracy Kratzke i Drews podkreślają, że opracowanie skutecznych promptów jest kluczowe dla uzyskania wysokiej jakości konfiguracji z modelu językowego oraz że podejście to stanowi obiecujący kierunek rozwoju automatyzacji DevOps. Sugestie te potwierdzają, iż z odpowiednimi technikami LLM może znacząco ułatwić tworzenie manifestów, czyniąc zarządzanie Kubernetes bardziej intuicyjnym i mniej obarczonym ryzykiem błędu ludzkiego.
+
+W praktyce migracji aplikacji do chmury istotny jest również scenariusz konwersji istniejących konfiguracji kontenerów do formatu Kubernetes. Ueno i Uchiumi (2024) zaproponowali wykorzystanie LLM do automatycznej migracji z Docker Compose do Kubernetes. Docker Compose jest prostszym narzędziem do definiowania wielokontenerowych aplikacji, często używanym przez deweloperów lokalnie, podczas gdy Kubernetes wymaga bardziej szczegółowych manifestów do wdrożenia w środowisku produkcyjnym. Różnica poziomu abstrakcji między Compose a Kubernetes sprawia, że ręczna migracja bywa czasochłonna i podatna na pomyłki. Autorzy opracowali benchmark pozwalający ocenić, jak dobrze model językowy (np. ChatGPT) radzi sobie z tłumaczeniem pliku docker-compose.yml na odpowiadające mu manifesty Kubernetes. Ocena obejmowała trzy kryteria: (1) czytelność i zrozumiałość wygenerowanego kodu dla programisty (np. czy zachowano przejrzystą strukturę i komentarze), (2) zgodność ze specyfikacją wejściową (czy manifest Kubernetes rzeczywiście odpowiada usługom/zależnościom z oryginalnego Compose) oraz (3) spójność i kompletność wygenerowanej konfiguracji. Wyniki eksperymentów pokazały, że LLM potrafią zasadniczo poprawnie konwertować typowe pliki Compose – w wielu przypadkach dodając nawet brakujące informacje, które nie były jawnie podane, a są wymagane przez Kubernetes (np. tworząc domyślne definicje dla elementów, które Compose traktuje uproszczono). Innymi słowy, model uzupełniał „luki” w specyfikacji, dostarczając działający manifest Kubernetes nawet z niepełnych danych wejściowych. Zauważono jednak dwa znaczące ograniczenia. Po pierwsze, brak komentarzy – wygenerowane manifesty zwykle nie zawierały żadnych adnotacji ani objaśnień, przez co traciły na czytelności z punktu widzenia dewelopera. Ręcznie pisane konfiguracje często zawierają komentarze wyjaśniające nietypowe ustawienia; model językowy pomijał tę warstwę, skupiając się wyłącznie na kodzie. Po drugie, przy nietypowych lub niejasnych specyfikacjach wejściowych jakość wyników znacząco spadała. Jeśli intencje użytkownika nie były jednoznaczne lub plik Compose zawierał niekonwencjonalne konstrukcje, LLM miewał trudności z poprawnym wygenerowaniem odpowiedników w Kubernetes. Mimo tych wad, praca Ueno i Uchiumi potwierdza, że LLM mogą wspomóc proces migracji do chmury, automatyzując dużą część pracy konfiguracyjnej. Wskazuje jednocześnie na potrzebę dalszych usprawnień – np. integracji mechanizmów dodających objaśnienia do kodu, czy lepszego radzenia sobie z niejednoznacznymi przypadkami poprzez dopytywanie użytkownika lub bardziej zaawansowane prompty.
+
+\begin{lstlisting}
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: example-app
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: example-app
+  template:
+    metadata:
+      labels:
+        app: example-app
+    spec:
+      containers:
+      - name: example-app
+        image: example-image:latest
+        ports:
+        - containerPort: 8080
+        resources:
+          limits:
+            cpu: "500m"
+            memory: "512Mi"
+          requests:
+            cpu: "200m"
+            memory: "256Mi"
+\end{lstlisting}
+
+Powyższy przykład przedstawia prosty manifest Kubernetes wygenerowany przez LLM, który definiuje deployment aplikacji z trzema replikami, ograniczeniami zasobów i ekspozycją portu.
+
+\textbf{Wykrywanie i naprawa błędnych konfiguracji przy użyciu LLM}
+
+Oprócz generowania nowych konfiguracji, istotnym polem badań jest wykorzystanie LLM do wykrywania i naprawy błędów w istniejących skryptach IaC. Błędne lub nieoptymalne konfiguracje mogą prowadzić do poważnych problemów – od awarii usług, po luki bezpieczeństwa narażające system na ataki. Tradycyjne narzędzia (skanery statyczne, lintery) potrafią wykryć pewne klasy błędów konfiguracyjnych, lecz ich naprawa zwykle spoczywa na inżynierach. Zainteresowanie budzi więc pytanie, czy model językowy mógłby automatycznie poprawiać wykryte nieprawidłowości IaC.
+
+Low i in. (2024) przeprowadzili badania nad automatycznym naprawianiem skryptów Terraform (IaC dla chmury) z wykorzystaniem modeli GPT-3.5 oraz GPT-4. Zaprezentowali oni podejście, w którym LLM otrzymuje jako wejście kod infrastruktury oraz raport z narzędzia skanującego (np. listę wykrytych podatności czy niezgodności z politykami bezpieczeństwa) i na tej podstawie generuje poprawioną wersję kodu. Co ważne, autorzy wprowadzili strategię human-in-the-loop, w której proces naprawy odbywa się w dwóch etapach: w pierwszym model stara się samodzielnie usunąć większość problemów, a w drugim programista może dostarczyć dodatkowych informacji lub kontekstu, aby pomóc modelowi naprawić trudniejsze błędy. Taka iteracyjna pętla ma na celu uzupełnienie brakującej wiedzy – wiele błędów IaC wymaga bowiem informacji o zewnętrznym kontekście (np. identyfikatorów zasobów w chmurze, które nie są zawarte bezpośrednio w kodzie. Eksperymenty Low i in. wykazały, że model GPT-4 znacząco przewyższa GPT-3.5 w skuteczności naprawy błędów konfiguracyjnych. Już po pierwszym przejściu GPT-4 usuwał średnio 18–34\% więcej wykrytych niezgodności niż GPT-3.5, a po drugim przejściu różnica ta sięgała nawet 57\% na korzyść GPT-4 (dla niektórych narzędzi skanujących). W najlepszym scenariuszu model GPT-4 był w stanie zredukować liczbę alarmów o błędnej konfiguracji aż o 84,7\% w stosunku do stanu początkowego, znacząco odciążając programistę. Uwzględnienie interwencji człowieka (czyli przekazanie modelowi dodatkowego kontekstu w drugiej iteracji) podniosło odsetek poprawnie usuniętych błędów łącznie o dalsze 22–60\%, osiągając maksymalnie 87,4\% naprawionych mis-konfiguracji (dla problemów wykrywanych przez skaner Checkov). Mimo tych imponujących wyników, analiza jakości wygenerowanych poprawek ujawniła pewne ograniczenia i wyzwania. Około 20,4\% zaproponowanych przez model poprawek okazało się nietrafnych – zawierały one błędy składniowe lub nie rozwiązywały faktycznego problemu, a jedynie „uciszały” ostrzeżenie skanera powierzchowną zmianą. Stwierdzono, że model ma tendencję do halucynowania pól konfiguracji, tzn. dodawania ustawień, które syntaktycznie pasują do kodu i powodują zniknięcie ostrzeżenia, lecz w rzeczywistości nie mają pokrycia w dokumentacji (nie istnieją) bądź nie poprawiają bezpieczeństwa. Przykładowo, LLM potrafił zaproponować pole, które „naprawia” błąd według skanera, ale to pole nie jest obsługiwane przez dany zasób, przez co wynikowy kod nie przejdzie walidacji schematu lub nadal nie spełnia zamierzonej polityki bezpieczeństwa. Takie zachowanie jest szczególnie niebezpieczne, gdyż generuje fałszywe poczucie poprawy – konfiguracja wygląda na poprawioną (skanery nie zgłaszają błędu), podczas gdy problem nadal istnieje lub pojawiają się inne błędy. Autorzy zaproponowali kilka potencjalnych rozwiązań tych problemów, w tym bardziej restrykcyjne prompty oraz dodatkowe automatyczne testy wygenerowanych poprawek (np. walidacja syntaktyczna i porównanie z intencją oryginalnego kodu). Praca Low i in. stanowi ważną wskazówkę, że choć LLM potrafią znacznie przyspieszyć naprawę infrastruktury jako kodu, to nie można polegać na nich bezkrytycznie – konieczne jest włączenie mechanizmów weryfikujących i korygujących ich propozycje.
+
+Kolejną kluczową kwestią badaną w literaturze jest bezpieczeństwo konfiguracji Kubernetes generowanych przez LLM. Manifesty K8s mogą zawierać subtelne błędy konfiguracyjne (np. brak ograniczeń zasobów, użycie uprzywilejowanych kontenerów, ekspozycja usług bez autoryzacji itp.), które nie wpływają od razu na działanie aplikacji, ale stanowią poważne ryzyko bezpieczeństwa. Malul i in. (2024) zajęli się problemem wykrywania i automatycznej remediacji niepoprawnych konfiguracji Kubernetes przy użyciu LLM, przedstawiając kompleksowe rozwiązanie o nazwie GenKubeSec. W odróżnieniu od wcześniej opisanych podejść, skupionych na generowaniu nowych konfiguracji, GenKubeSec zakłada istnienie pewnej bazy wiedzy o znanych błędach (mis-konfiguracjach) Kubernetes i wykorzystuje model językowy do odnajdywania tych błędów w dostarczonych plikach oraz sugerowania poprawek. Architektura GenKubeSec składa się z trzech głównych komponentów: (1) modułu przygotowania danych, gdzie zebrano obszerny zestaw znanych przypadków błędnych konfiguracji Kubernetes (Kubernetes Configuration Faults, KCF) i zunifikowano ich kategoryzację za pomocą ujednoliconego indeksu mis-konfiguracji (Unified Misconfig Index); (2) GenKubeDetect, czyli modelu LLM dostrojonego (fine-tuned) na zebranych danych, zdolnego do wykrywania różnorodnych błędów w konfiguracji Kubernetes; oraz (3) GenKubeResolve, który wykorzystuje pretrenowany model (bez dodatkowego trenowania) wraz z technikami prompt engineering i few-shot learning, aby dla każdego wykrytego błędu podać jego lokalizację w pliku, zrozumiałe wyjaśnienie oraz zaproponować konkretną poprawkę. Takie podejście pozwala na kompleksową obsługę problemów – od detekcji po naprawę – w ramach jednego systemu, podczas gdy wcześniejsze prace zazwyczaj koncentrowały się albo na samym wykrywaniu, albo tylko na sugerowaniu poprawek. Efektywność GenKubeSec oceniono porównawczo z istniejącymi narzędziami do statycznej analizy manifestów K8s (m.in. Checkov, KubeLinter, Terrascan). Wyniki są bardzo obiecujące: dostrojony model GenKubeDetect osiągnął precyzję na poziomie 0,990 oraz czułość (recall) 0,999 w wykrywaniu błędów KCF. Oznacza to, że niemal wszystkie rzeczywiste błędy zostały wykryte (tylko 0,1\% umknęło uwadze modelu), przy znikomym odsetku fałszywych alarmów. Dla porównania, sumaryczna precyzja trzech popularnych narzędzi opartych na regułach była zbliżona (również około 0,99), ale każde z nich z osobna miało luki (błędy wykryte przez GenKubeSec wykraczały poza ich pokrycie). Świadczy to o ogólnej zdolności modelu do uogólniania wiedzy – jest w stanie wykryć także te niepoprawności, których nie obejmują zdefiniowane statycznie reguły. Co więcej, przy pomocy modułu GenKubeResolve system generował dla każdego błędu klarowne wyjaśnienie i propozycję naprawy, które zostały zweryfikowane przez ekspertów Kubernetes jako trafne i poprawne. Przykładowo, jeśli w manifeście użyto domyślnej przestrzeni nazw (co jest uznawane za złą praktykę), GenKubeSec wskazywał dokładnie tę linię, wyjaśniał dlaczego domyślna namespace nie powinna być używana i sugerował dodanie konkretnej deklaracji namespace lub zmianę na dedykowaną przestrzeń. Istotnym elementem wdrożeniowym GenKubeSec jest to, że działa on w oparciu o lokalnie uruchomiony model LLM, a nie poprzez zapytania do zewnętrznego API modelu. Dzięki temu rozwiązanie minimalizuje ryzyko wycieku danych wrażliwych – pliki konfiguracyjne (które mogą zawierać np. informacje o architekturze systemu, nazwy usług, a nawet niektóre dane dostępowe) nie są nigdzie wysyłane, co mogłoby stwarzać zagrożenie bezpieczeństwa lub prywatności. Twórcy podkreślają tę zaletę, zauważając że wiele firm obawia się korzystać z chmurowych API LLM właśnie z uwagi na konieczność przesyłania swojej konfiguracji na zewnątrz. GenKubeSec pokazuje, że możliwe jest skuteczne połączenie technik uczenia maszynowego z praktycznymi wymaganiami bezpieczeństwa w środowisku korporacyjnym.
+
+\subsection{Wyzwania i ograniczenia}
+
+
+Na podstawie przeglądu literatury można stwierdzić, że zastosowanie dużych modeli językowych w dziedzinie Infrastructure as Code niesie ze sobą znaczące korzyści, ale także wiąże się z istotnymi wyzwaniami. Do głównych zalet zaliczymy:
+
+Automatyzacja i oszczędność czasu: LLM są w stanie automatycznie wygenerować znaczną część kodu konfiguracyjnego, począwszy od definicji obrazu Docker, po złożone manifesty Kubernetes. Umożliwia to przyspieszenie wdrożeń – konfiguracje, które normalnie zajęłyby godziny ręcznego pisania i debugowania, mogą zostać uzyskane w ciągu minut. Przykładowo, Repo2Run pokazał, że LLM może samodzielnie przygotować Dockerfile dla skomplikowanego projektu, eliminując dziesiątki potencjalnych kroków manualnych. Automatyzacja przekłada się również na odciążenie specjalistów: deweloper bez głębokiej wiedzy o Kubernetes może uzyskać działający manifest, skupiając się na wysokopoziomowych wymaganiach, podczas gdy szczegółowy kod wygeneruje za niego model. To obniża próg wejścia – zespoły mogą szybciej adoptować technologie chmurowe bez długiego szkolenia z każdego narzędzia.
+
+Poprawa produktywności i jakości: Dzięki LLM możliwe jest wygenerowanie szablonów konfiguracji zgodnych z ogólnie przyjętymi wzorcami i dobrymi praktykami. Dobrze skonstruowany prompt może spowodować, że model uwzględni zalecane ustawienia bezpieczeństwa czy optymalizacji (np. doda limity zasobów w manifeście, utworzy oddzielne sieci dla kontenerów, itp.). W badaniach odnotowano, że LLM potrafią uzupełniać brakujące elementy konfiguracji, zmniejszając ryzyko pominięcia istotnego parametru. Ponadto modele takie jak GPT-4 wykazały zdolność do korygowania istniejącego kodu – co oznacza, że mogą nie tylko generować, ale i naprawiać konfiguracje, redukując liczbę błędów przed wdrożeniem. To wszystko przekłada się na wyższą jakość infrastruktury: bardziej spójne, przemyślane i bezpieczne konfiguracje.
+
+Ujednolicenie i dokumentacja wiedzy: LLM trenują się na ogromnych zbiorach danych, które zawierają również wiedzę ekspercką rozsianą po dokumentacjach, blogach, forach. Wykorzystując model, możemy niejako skondensować tę wiedzę w generowanych konfiguracjach. Modele mogą wskazywać rozwiązania podpatrzone w wielu źródłach, co jest korzystne zwłaszcza w małych zespołach bez dedykowanych specjalistów od DevOps. Dodatkowo, niektóre prace sugerują, że generowane przez LLM wyjaśnienia (np. moduł GenKubeResolve) mogą służyć jako dokumentacja edukacyjna – model tłumaczy, dlaczego coś jest błędem i jak to naprawić. To może pomóc zespołom lepiej zrozumieć własną infrastrukturę i uczyć się na bieżąco dobrych praktyk.
+
+
+Z drugiej strony, pojawia się szereg wyzwań i ryzyk, które należy rozważyć wdrażając LLM do generowania IaC:
+
+Halucynacje i błędne konfiguracje: Duże modele językowe czasem z dużą pewnością podają informacje nieprawdziwe lub nieadekwatne. W kontekście IaC może to oznaczać wygenerowanie parametrów, które wydają się poprawne, ale w rzeczywistości są błędne lub nieistnieją w danej technologii (np. wymyślone pola w manifeście Kubernetes czy atrybuty zasobów Terraform). Tego typu halucynacje są groźne, ponieważ mogą nie zostać natychmiast wychwycone – plik konfiguracyjny może przejść prostą walidację składni, ale dopiero przy wdrożeniu ujawni się problem, albo co gorsza, błąd pozostanie ukryty jako „tykająca bomba” (np. brak właściwego zabezpieczenia). Rozwiązaniem może być wzbogacenie procesu generowania o walidatory, testy lub drugi model weryfikujący, jednak zwiększa to złożoność całego potoku wytwórczego.
+
+Brak gwarancji spełnienia wymagań: Obecne modele działają jak „czarne skrzynki” – trudno przewidzieć, czy wygenerowany kod w pełni spełni założenia użytkownika. Ueno i Uchiumi wskazali, że brak jest mechanizmu pewnej weryfikacji, czy output modelu pokrywa wszystkie elementy specyfikacji wejściowej i czyni to we właściwy sposób. W praktyce oznacza to konieczność ręcznego przeglądu i testów. W przypadku typowego oprogramowania, testy jednostkowe i integracyjne mogą wychwycić błędy; dla konfiguracji IaC również pojawiają się inicjatywy tworzenia testów (np. CloudEval-YAML, czy inspekcje jak Checkov). Nadal jednak odpowiedzialność za ostateczną poprawność spoczywa na człowieku. LLM mogą nie uwzględnić pewnych niuansów biznesowych czy kontekstowych, których nie było w opisie – np. mogą domyślnie otworzyć port usługi, mimo że według wymagań bezpieczeństwa powinien on być ograniczony. Stąd, wrażliwe zastosowania LLM będą wymagały podejścia hybrydowego, łączącego AI z wiedzą inżyniera (choćby na etapie przeglądu końcowego wygenerowanej konfiguracji).
+
+Bezpieczeństwo i zgodność: Paradoksalnie, narzędzia służące poprawie bezpieczeństwa (jak GenKubeSec) same muszą być zaadresowane pod kątem bezpieczeństwa. Jedno zagrożenie to kwestia poufności danych – jeśli korzystamy z zewnętrznej usługi LLM (np. API chmurowego), musimy wysłać do niej nasze pliki konfiguracyjne, które mogą zawierać wrażliwe informacje o systemie. W środowiskach korporacyjnych często jest to nieakceptowalne, dlatego preferowane może być użycie lokalnych instancji modeli lub anonimizacja danych przed wysłaniem. Kolejna sprawa to bezpieczeństwo generowanych konfiguracji: model może nieświadomie zaproponować ustawienia z lukami (np. kontener uruchamiany z uprawnieniami root, brak szyfrowania komunikacji, itp.). Wygenerowany kod koniecznie musi przejść przez standardowe procedury hardeningu i audytu bezpieczeństwa tak samo, jak kod pisany ręcznie. Dopiero połączenie zdolności LLM do generowania wraz z istniejącymi skanerami bezpieczeństwa daje pełny obraz – sam model nie zastąpi świadomej analizy pod kątem zgodności z politykami bezpieczeństwa organizacji.
+
+Niezawodność i deterministyczność: Modele językowe mogą dawać różne wyniki na podstawie nawet subtelnych różnic w promptach. Oznacza to, że proces generowania konfiguracji może być nie zawsze powtarzalny – dwie iteracje mogą wygenerować nieco inny manifest. W kontekście IaC oczekujemy deterministycznych rezultatów (ta sama specyfikacja powinna dać ten sam manifest). Konieczne jest więc odpowiednie strojenie parametrów modelu (np. temperature=0 dla OpenAI GPT, co zmniejsza losowość) oraz standaryzacja promptów, by wyniki były jak najbardziej spójne i przewidywalne. Dodatkowo, jeśli integrujemy LLM w potoki CI/CD, musimy brać pod uwagę jego dostępność i czas odpowiedzi – model pracujący na dużym manifeście może mieć opóźnienia lub może być ograniczony limitami API. To aspekty inżynierskie, które decydują o praktycznej przydatności rozwiązania.
+
+\subsection{Podsumowanie}
+Podsumowując, literatura wskazuje, że duże modele językowe posiadają już zdolności umożliwiające znaczne usprawnienie procesu tworzenia i utrzymania infrastruktury jako kodu. Udane demonstracje – takie jak automatyczne wygenerowanie działającego Dockerfile dla setek projektów, czy wygenerowanie manifestu Kubernetes pozwalającego na wdrożenie aplikacji bez ręcznej konfiguracji – dowodzą, że automatyzacja DevOps z pomocą AI jest możliwa i może przynieść realne oszczędności czasu oraz redukcję błędów. Jednocześnie jednak żadne z rozwiązań nie jest pozbawione wad. Wyzwania związane z halucynacjami modeli, koniecznością walidacji wyników i zapewnieniem bezpieczeństwa wskazują, że rola człowieka (eksperta DevOps) wciąż pozostaje ważna jako nadzorcy i korektora działania AI. Dlatego bieżące badania kierują się ku metodom łączenia silnych stron LLM z mechanizmami kontrolnymi – np. stosowanie podejścia human-in-the-loop, rozwijanie benchmarków oceny jakości (aby móc mierzyć postępy i porównywać modele) oraz eksplorowanie technik prompt engineering, które zmniejszą skłonność modeli do popełniania typowych błędów. Niniejsza praca magisterska wpisuje się w ten nurt, starając się nie tylko wykorzystać istniejące możliwości LLM do generowania konfiguracji Docker i Kubernetes, ale także zaproponować sposoby radzenia sobie z ich ograniczeniami – tak, aby wygenerowane IaC było nie tylko poprawne składniowo, ale i zgodne z intencjami użytkownika, bezpieczne oraz gotowe do zastosowania w produkcyjnych środowiskach PaaS.
