--- a/docs/tex/2-przeglad-literatury.tex
+++ b/docs/tex/2-przeglad-literatury.tex
@@ -3,11 +3,11 @@
 
 \subsection{Zastosowanie LLM w generowaniu kodu infrastruktury}
 
-Podejście Infrastructure as Code polega na zarządzaniu infrastrukturą IT poprzez definiowanie jej konfiguracji w postaci czytelnego dla maszyny kodu. Zapewnia to automatyzację, spójność środowisk, kontrolę wersji oraz skalowalność zarządzania infrastrukturą. Tworzenie i utrzymanie takiej infrastruktury bywa jednak wymagające, stąd coraz większe zainteresowanie automatyzacją tych zadań z użyciem AI. Duże modele językowe, trenowane na ogromnych zbiorach danych tekstowych i kodu, wykazały zdolność do generowania i rozumienia kodu, co czyni je obiecującym narzędziem do automatycznego tworzenia konfiguracji IaC. W ostatnich latach pojawiło się wiele prac badających zastosowanie LLM do różnych platform i języków IaC. Srivatsa i in. (2024) przedstawili przekrojowe spojrzenie na ten temat w swojej pracy przeglądowej, podkreślając, że automatyzacja IaC za pomocą LLM może zredukować nakład pracy ludzkiej i błędy, jeśli uda się odpowiednio ukierunkować model. W ankiecie tej omówiono również wyzwania stojące przed takimi rozwiązaniami oraz perspektywy dalszych badań.
+Podejście Infrastructure as Code polega na zarządzaniu infrastrukturą IT poprzez definiowanie jej konfiguracji w postaci czytelnego dla maszyny kodu. Zapewnia to automatyzację, spójność środowisk, kontrolę wersji oraz skalowalność zarządzania infrastrukturą. Tworzenie i utrzymanie takiej infrastruktury bywa jednak wymagające, stąd coraz większe zainteresowanie automatyzacją tych zadań z użyciem AI. Duże modele językowe, trenowane na ogromnych zbiorach danych tekstowych i kodu, wykazały zdolność do generowania i rozumienia kodu, co czyni je obiecującym narzędziem do automatycznego tworzenia konfiguracji IaC. W ostatnich latach pojawiło się wiele prac badających zastosowanie LLM do różnych platform i języków IaC. Srivatsa i in. (2024) przedstawili przekrojowe spojrzenie na ten temat w swojej pracy przeglądowej, podkreślając, że automatyzacja IaC za pomocą LLM może zredukować nakład pracy ludzkiej i błędy, jeśli uda się odpowiednio ukierunkować model. W ankiecie tej omówiono również wyzwania stojące przed takimi rozwiązaniami oraz perspektywy dalszych badań \cite{srivatsa_survey_2024}.
 
-Aktualne badania integrujące LLM z narzędziami chmurowymi pokazują obiecujące rezultaty, choć są to dopiero początki. Lanciano i in. (2023) zaproponowali wyspecjalizowany model analizujący pliki wdrożeniowe Kubernetes, aby wspomóc mniej doświadczonych użytkowników w projektowaniu konfiguracji i zapewnieniu ich jakości. Z kolei Xu i in. (2023) wprowadzili benchmark CloudEval-YAML do oceny zdolności LLM w generowaniu konfiguracji aplikacji cloud-native (w formacie YAML), udostępniając zestaw testów jednostkowych do weryfikacji poprawności wygenerowanych manifestów. Inni badacze sugerują zastosowanie LLM również do automatycznego monitorowania i utrzymania systemów – np. Kowal i in. zaproponowali pipeline wykorzystujący LLM do detekcji anomalii i autoremediacji w środowisku mikrousług, w celu zwiększenia stabilności systemu. Podejścia te często bazują na trenowaniu dedykowanych modeli językowych dopasowanych do domeny konfiguracji (np. z użyciem specjalistycznych korpusów danych). Alternatywą dla kosztownego trenowania od podstaw jest wykorzystanie istniejących, ogólnych modeli (GPT-3.5, GPT-4, Llama2 itp.) i dostrajanie ich za pomocą odpowiednich promptów. Nasza praca wpisuje się w ten nurt – badamy, jak standardowe modele językowe mogą być wykorzystane (bez dodatkowego trenowania) do generowania plików Dockerfile i manifestów Kubernetes zgodnych z wymaganiami DevOps, poprzez odpowiednie techniki inżynierii promptów.
+Aktualne badania integrujące LLM z narzędziami chmurowymi pokazują obiecujące rezultaty, choć są to dopiero początki. Lanciano i in. (2023) zaproponowali wyspecjalizowany model analizujący pliki wdrożeniowe Kubernetes, aby wspomóc mniej doświadczonych użytkowników w projektowaniu konfiguracji i zapewnieniu ich jakości \cite{lanciano_analyzing_2023}. Z kolei Xu i in. (2023) wprowadzili benchmark CloudEval-YAML do oceny zdolności LLM w generowaniu konfiguracji aplikacji cloud-native (w formacie YAML), udostępniając zestaw testów jednostkowych do weryfikacji poprawności wygenerowanych manifestów \cite{ueno_migrating_2024}. Inni badacze sugerują zastosowanie LLM również do automatycznego monitorowania i utrzymania systemów – np. Malul i in. (2024) zaproponowali pipeline wykorzystujący LLM do detekcji anomalii i autoremediacji w środowisku Kubernetes, w celu zwiększenia stabilności systemu \cite{malul_genkubesec_2024}. Podejścia te często bazują na trenowaniu dedykowanych modeli językowych dopasowanych do domeny konfiguracji (np. z użyciem specjalistycznych korpusów danych). Alternatywą dla kosztownego trenowania od podstaw jest wykorzystanie istniejących, ogólnych modeli (GPT-3.5, GPT-4, Llama2 itp.) i dostrajanie ich za pomocą odpowiednich promptów \cite{kratzke_dont_2024}. Nasza praca wpisuje się w ten nurt – badamy, jak standardowe modele językowe mogą być wykorzystane (bez dodatkowego trenowania) do generowania plików Dockerfile i manifestów Kubernetes zgodnych z wymaganiami DevOps, poprzez odpowiednie techniki inżynierii promptów.
 
-Poniżej omówiono najważniejsze prace dotyczące wykorzystania LLM do generowania konfiguracji IaC, ze szczególnym naciskiem na praktyczne narzędzia i systemy oraz badania eksperymentalne. Przedstawiono zarówno korzyści automatyzacji (przyspieszenie pracy, odciążenie ekspertów, poprawa produktywności), jak i wyzwania (błędy i halucynacje modeli, aspekty bezpieczeństwa, zgodność z intencjami użytkownika), jakie zidentyfikowano w literaturze.
+Poniżej omówiono najważniejsze prace dotyczące wykorzystania LLM do generowania konfiguracji IaC, ze szczególnym naciskiem na praktyczne narzędzia i systemy oraz badania eksperymentalne. Przedstawiono zarówno korzyści automatyzacji (przyspieszenie pracy, odciążenie ekspertów, poprawa produktywności), jak i wyzwania (błędy i halucynacje modeli, aspekty bezpieczeństwa, zgodność z intencjami użytkownika), jakie zidentyfikowano w literaturze \cite{malul_genkubesec_2024, kratzke_dont_2024}.
 
 \textbf{Generowanie konfiguracji Docker przy użyciu LLM}
 
@@ -39,6 +39,8 @@ Powyższy przykład wygenerowanego przez LLM pliku Dockerfile ilustruje, jak mod
 Jednym z pionierskich rozwiązań praktycznych integrujących LLM z DevOps jest Repo2Run – agent oparty na LLM, zaprojektowany do automatycznego konfigurowania środowisk i generowania plików Dockerfile dla dowolnych repozytoriów Python. Narzędzie to zostało zaprezentowane przez Hu i in. (2025) i stanowi próbę pełnej automatyzacji procesu tworzenia kontenera na podstawie kodu aplikacji. Problem, jaki adresuje Repo2Run, to złożoność ręcznego przygotowania Dockerfile dla istniejącego projektu – np. ustalenie zależności, właściwej bazy obrazu, komend instalacji pakietów – a także ryzyko błędów podczas konfiguracji środowiska (np. niepowodzenie jednej komendy może zostawić środowisko w nieokreślonym stanie). Repo2Run rozwiązuje to poprzez dwupoziomową architekturę środowiska uruchomieniowego. Model LLM działa wewnątrz odizolowanego kontenera (środowisko wewnętrzne) i wykonuje kolejne polecenia konfiguracyjne, podczas gdy otaczające go środowisko zewnętrzne monitoruje przebieg i w razie potrzeby modyfikuje kontekst (np. zmienia bazowy obraz Docker). Wprowadzono mechanizm rollback, który przy każdym błędzie cofa stan kontenera do poprzedniego stabilnego punktu, zapobiegając tzw. „zanieczyszczeniu” środowiska nieudanymi komendami. Równolegle działa komponent generujący Dockerfile – na podstawie zestawu wykonanych z sukcesem poleceń buduje on finalny plik Dockerfile, pomijając te instrukcje, które powodowały błędy, aby wynikowy obraz dawał się zbudować bez błędów. Według autorów, Repo2Run jest pierwszym podejściem wykorzystującym agenta LLM do automatycznego wygenerowania Dockerfile z istniejącego repozytorium kodu w pełni samodzielnie. Skuteczność rozwiązania oceniono na zbiorze 420 popularnych projektów Pythona z testami jednostkowymi – w 86\% przypadków Repo2Run zdołał poprawnie skonfigurować środowisko i wygenerować działający Dockerfile dla danego projektu. Tak wysoki odsetek pokazuje potencjał LLM w automatyzacji tworzenia kontenerów, choć warto zauważyć, że około 14\% przypadków nadal wymaga interwencji (co może wynikać z nietypowych zależności lub ograniczeń modelu w rozumieniu specyfiki danego projektu).
 
 W pracy "An LLM-based Agent for Reliable Docker Environment Configuration" autorzy idą o krok dalej, prezentując agenta opartego na LLM, który nie tylko generuje pliki Dockerfile, ale również iteracyjnie udoskonala je na podstawie feedbacku z procesu budowy i uruchamiania kontenerów. To podejście pokazuje, jak LLM mogą być wykorzystane jako część większego systemu, który adaptuje się do zmieniających się wymagań i warunków.
+
+%
 
 \textbf{Zastosowanie LLM w generowaniu i zarządzaniu konfiguracjami Kubernetes}
 
